--- a/css/style.css
+++ b/css/style.css
@@ -48,15 +48,24 @@ nav #menu ul {
 @media only screen and (max-width:680px) {
     h1 {
         padding: 30px;
-        font-size-adjust: auto;
+        font-size: 2em;
         /**color: aquamarine;
         background-color: aqua;*/
     }
     form {
       padding: 40px;
     }
+    #app {
+      font-size: 10px;
+    }
 }
-@media only screen and (max-width:300px) {}
+@media only screen and (max-width:300px) {
+
+  #app {
+    font-size: 8px;
+    padding: clear;
+  }
+}
 
 i {
 
@@ -75,28 +84,24 @@ form {
     right: 0;
 }
 
-footer {
-            text-align: left;
-            font-family: 'arial';
-            color: grey;
-            font-size: 2em;
-            margin-top: 10px;
+#footer {
+  border-top: solid 1px black;
 }
 
 .social:hover {
-       -webkit-transform: scale(3.1);
-       -moz-transform: scale(3.1);
-       -o-transform: scale(3.1);
+       -webkit-transform: scale(1.3);
+       -moz-transform: scale(1.3);
+       -o-transform: scale(1.3);
    }
    .social {
      margin-left: 20px;
      margin-right: 20px;
 
-       -webkit-transform: scale(2.6);
+       -webkit-transform: scale(1.0);
        /* Browser Variations: */
 
-       -moz-transform: scale(2.6);
-       -o-transform: scale(2.6);
+       -moz-transform: scale(1.0);
+       -o-transform: scale(1.0);
        -webkit-transition-duration: 0.5s;
        -moz-transition-duration: 0.5s;
        -o-transition-duration: 0.5s;
@@ -147,3 +152,4 @@ footer {
          border-top: 1px solid #aaaaaa;
          border-bottom: 1px solid #ffffff;
       }
+/** footer edit*/
